plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.3'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.project'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	// https://mvnrepository.com/artifact/org.postgresql/postgresql
	implementation group: 'org.postgresql', name: 'postgresql'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.apache.httpcomponents.client5:httpclient5'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
	implementation group: 'org.json', name: 'json', version: 20180130
	//###	DEPENDENCY OVERRIDE END	###

	implementation group: 'com.google.guava', name: 'guava', version: '25.0-jre'

	implementation (group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.5.0'){
		exclude group: 'org.webjars', module: 'swagger-ui'
	}

	implementation group: 'org.webjars', name: 'swagger-ui', version: '3.43.0'

	//Junit
	testImplementation 'junit:junit'

	testImplementation group: 'org.mockito', name: 'mockito-core'
}

tasks.named('test') {
	useJUnitPlatform()
}

test {
	jvmArgs "--add-opens","java.base/java.lang=ALL-UNNAMED"
	testLogging {
		events 'started', 'passed', 'skipped', 'failed'
		exceptionFormat 'full'
	}
}
